--- a/templates/index.html
+++ b/templates/index.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Посты</title>
-    <h1>Хотите добавить пост?</h1>
-    <form action="/add_post/">
-    <input type="submit" value="Add">
+    <link rel="stylesheet" href="{{url_for('static', filename= 'css/style.css') }}">
+
     <style>
+        #panel {position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;}
         body {
             font-family: Arial, sans-serif;
             background-color: #f7f7f7;
@@ -65,7 +68,20 @@
     </style>
 </head>
 <body>
-
+<div id="panel">
+    {% for b in c %}
+    <form action="/add_post/"> <h4>Хотите добавить фотку?</h4>
+    <input type="submit" value="Add">
+</form>
+<form action="/login/"><h4> Войти в свой аккаунт</h4>
+    <input type="submit" value="Login">
+</form>
+<form  action="/find/", method="post">
+<input type="text" name="id" placeholder="Поиск по id пользователя:">
+    <input type="submit" value="найти">
+</form>
+</div>
+{% endfor %}
 {% for i in a %}
     <div class="container">
         <div class="post">
@@ -74,7 +90,6 @@
             <div class="description"> </div>
         </div>
 {% endfor %}
-
     </div>
 </body>
 </html>
