--- a/templates/result_id.html
+++ b/templates/result_id.html
@@ -4,13 +4,22 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <link rel="stylesheet" href="{{url_for('static', filename= 'css/style.css') }}">
+    <style>
+        body {text-align: center;}
+        </style>
 </head>
 <body>
-{% for i in b %}
+{% for i in c %}
+{% for t in d %}
 <h3> {{i.0}} </h3>
-<h3> {{i.1}} </h3>
-<h3> {{i.2}} </h3>
-<h3> {{i.3}} </h3>
+<h3> {{i.1}} {{i.2}} {{i.3}}</h3>
+<h4>Username: {{i.6}}</h4>
+<h3> Gender: {{i.4}} </h3>
+<form action="/find/" method="POST"><h4> Подписчики: {{i.8}}</h4>
+    <input name="id" value="{{i.0}}" style="display:none">
+    <input type="submit" value="+">
+    </form>
+{% endfor %}
 {% endfor %}
 </body>
 </html>
